# specflow-3

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: clustering.yaml  models.yaml  scoring.yaml
docs/: launch-checklist.md  plan.md  spend.md
docs/adr/: 001-iad1-server-functions.md  002-no-vercel-ai-sdk.md  003-no-vercel-ai-gateway.md  004-no-vercel-workflow.md  005-magic-link-only-phase1.md
docs/lessons/: branching-requires-pro.md  rls-parent-scoped-tables.md  supabase-hardened-grants.md  supabase-local-no-docker.md
docs/lib-notes/: next-14.2.md  pgvector-0.8.md
docs/reviews/: s2-rls.md
docs/source/: SpecFlow_PRD_v2.md  SpecFlow_TechStack_v3.md
specflow/: main.py  pyproject.toml
specflow/mcp/: main.py
specflow/worker/: main.py
supabase/: config.toml
supabase/migrations/: 20260612000101_extensions.sql  20260612000102_tables_tenancy_ingestion.sql  20260612000103_tables_intelligence_specs.sql  20260612000104_tables_pipeline_ops_billing.sql  20260612000105_indexes_triggers.sql  20260612000106_views_mcp_reader.sql  20260612000107_append_only.sql  20260612000108_auth_hook_rls.sql
tests/api/: test_health.py
tests/integration/db/: conftest.py  seed.sql  tables.py  test_frequency.py  test_hnsw.py  test_immutability.py  test_mcp_reader.py  test_rls_denial.py  test_token_hook.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
web/app/: layout.tsx  page.tsx
web/lib/: brand.ts
