[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.0",
    "psycopg[binary]==3.2.3",
    "PyJWT==2.9.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["specflow"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
